# home_automation

./: .coverage  .env_template  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  build_local.sh  log_indigo_metrics.py  log_netatmo.py  pyproject.toml  pytest.ini  requirements.txt  sprinkler_multiplier.py  update_magic_mirror_temp.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
deploy/base/: jobs.yaml  kustomization.yaml
deploy/dev/: kustomization.yaml
deploy/prod/: kustomization.yaml
home_automation/: __init__.py  sprinkler_multiplier.py  utilities.py
tests/: __init__.py  test_home_automation.py  test_sprinkler_multiplier.py  test_utilities.py
