[tool.poetry]
name = "home_automation"
version = "0.1.1"
description = ""
authors = ["David Snider <david@davidsnider.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7"
requests = "^2.32.3"
pandas = "^2.2.3"
tabulate = "^0.9.0"
matplotlib = "^3.9.2"
Markdown = "^3.7"
statsd = "^4.0.1"
influxdb = "^5.3.2"
google-api-python-client = "^2.152.0"
google-auth = "^2.36.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
pydantic-settings = "^2.6.1"
poetry-plugin-export = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
jupyter = "^1.1.1"
detect-secrets = "^1.5.0"
flake8 = "^7.1.1"
bandit = "^1.7.10"
interrogate = "^1.7.0"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.8.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
